--- a/albedo.ipynb
+++ b/albedo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,17 +125,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def whitecap(µ, σ):\n",
+    "def surface_roughness(µ, σ):\n",
+    "    # Surface roughness following Jin et al. 2014 equation 4\n",
+    "    # This rougness parameter determines the Fresnel refraction \n",
+    "    # index from flat surface\n",
     "    return (0.0152-1.7873*µ + 6.8972*(µ**2)-8.5778*(µ**3)+ 4.071*σ-7.6446*µ*σ) * np.exp(0.1643-7.8409*µ-3.5639*µ**2-2.3588*σ+10.054*µ*σ)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,12 +156,12 @@
     "    f_0 = calculate_alpha_dir(1.34,µ)\n",
     "    f_λ = calculate_alpha_dir(n_λ,µ)\n",
     "    \n",
-    "    return f_λ - (whitecap(µ, σ)*f_λ/f_0)"
+    "    return f_λ - (surface_roughness(µ, σ)*f_λ/f_0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,17 +206,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def whitecap():\n",
+    "    # Whitecap effect as defined by Salisbury et al. 2014. NOTE that the value in paper is in percent\n",
+    "    # so we use the ratio instead (/100.) \n",
+    "    # Salisbury, D. J., Anguelova, M. D., and Brooks, I. M.: Global Distribution and Seasonal \n",
+    "    # Dependence of Satellite-based Whitecap Fraction\n",
+    "    #\n",
+    "    # Whitecaps are the surface manifestation of bubble plumes, created when \n",
+    "    # surface gravity waves break and entrain air into the water column. \n",
+    "    # They enhance air-sea exchange, introducing physical processes different from \n",
+    "    # those operating at the bubble-free water surface. \n",
+    "\n",
+    "    return 0.000397*(np.exp(1.59*np.log(wind)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_spectral_and_broadband_OSA(wind,alpha_wc,alpha_direct,alpha_diffuse,alpha_direct_chl,alpha_diffuse_chl,solar_energy):\n",
-    "    # ocean surface albedo - OSA\n",
-    "    wc = 0.0397*wind**1.59\n",
+    "    # Calculate the wavelength integrated ocean surface albedo - OSA\n",
+    "    \n",
+    "    wc = whitecap()\n",
+    "    \n",
     "    OSA_direct = (alpha_direct + alpha_direct_chl) * (1-wc) + wc*alpha_wc\n",
     "    OSA_diffuse = (alpha_diffuse + alpha_diffuse_chl) * (1-wc) + wc*alpha_wc\n",
-    "    \n",
-    "    # Integrate across all wavelengths 200-4000nm at 10 nm wavelength bands and then weight by the solar energy at each band\n",
+    "    print(\"OSA_direct {}\".format(np.mean(OSA_direct)))\n",
+    "\n",
+    "    # Integrate across all wavelengths 200-4000nm at 10 nm wavelength bands and then \n",
+    "    # weight by the solar energy at each band\n",
     "    OSA_direct_broadband = np.sum(OSA_direct*solar_energy)/np.sum(solar_energy)\n",
     "    OSA_diffuse_broadband = np.sum(OSA_diffuse*solar_energy)/np.sum(solar_energy)\n",
     "    print(OSA_direct_broadband,OSA_diffuse_broadband)"
@@ -229,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +269,10 @@
       "2  220.0  0.000349  1.42     0.730   1.310  0.0995      0.0\n",
       "3  230.0  0.000384  1.41     0.708   0.928  0.0820      0.0\n",
       "4  240.0  0.000292  1.40     0.685   0.718  0.0685      0.0\n",
-      "0.02467876233972033 0.05509282471935263\n"
+      "alpha_direct 0.019962535091639328\n",
+      "alpha_direct_chl 0.0011377583493678476\n",
+      "OSA_direct 0.02191732212765062\n",
+      "0.027057211124531782 0.05294671116125624\n"
      ]
     }
    ],
@@ -257,12 +287,13 @@
     "alpha_wc=df[\"a_wc(λ)\"].values\n",
     "solar_energy=df[\"E(λ)\"].values\n",
     "\n",
-    "theta_deg=20.0\n",
-    "wind=0.0\n",
+    "theta_deg=11.0\n",
+    "wind=10.0\n",
     "chl=1.00001\n",
     "\n",
     "# Solar zenith angle\n",
     "µ = np.cos(np.radians(theta_deg))\n",
+    "\n",
     "# wind is wind at 10 m height (m/s)\n",
     "σ = np.sqrt(0.003+0.00512*wind)\n",
     "\n",
@@ -274,12 +305,14 @@
     "\n",
     "# Direct reflection\n",
     "alpha_direct = vec_calculate_direct_reflection(refractive_indexes,µ,σ)\n",
+    "print(\"alpha_direct {}\".format(np.mean(alpha_direct)))\n",
     "\n",
     "# Diffuse reflection\n",
     "alpha_diffuse = vec_calculate_diffuse_reflection(refractive_indexes,σ)\n",
     "\n",
     "# Reflectrion from chlorophyll and biological pigments\n",
     "alpha_direct_chl = vec_calculate_direct_reflection_from_chl(wavelengths, chl, alpha_chl, alpha_w, beta_w, σ, µ, alpha_direct)\n",
+    "print(\"alpha_direct_chl {}\".format(np.mean(alpha_direct_chl)))\n",
     "\n",
     "# Diffuse reflection interior of water from chlorophyll\n",
     "alpha_diffuse_chl = vec_calculate_diffuse_reflection_from_chl(wavelengths, chl, alpha_chl, alpha_w, beta_w, σ, alpha_direct)\n",
@@ -290,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
